# ErikInit

./: CMakeLists.txt  README.MD
src/: init.c
